# fastapi-easy-versioning

./: .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  Justfile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: lint.yml  mkdocs-publish.yml  release.yml  tests.yml
dependency/: index.html
docs/en/: dependency.md  index.md  middleware.md
docs/en/examples/: multiple.md  simple.md
docs/ru/: dependency.md  index.md  middleware.md
docs/ru/examples/: multiple.md  simple.md
examples/: multiple_versioning.py  simple_versioning.py
examples/multiple/: index.html
examples/simple/: index.html
middleware/: index.html
ru/: index.html
ru/dependency/: index.html
ru/examples/multiple/: index.html
ru/examples/simple/: index.html
ru/middleware/: index.html
search/: search_index.json
src/fastapi_easy_versioning/: __init__.py  dependency.py  middleware.py
tests/: conftest.py  test_dependency.py  test_depenpency.py  test_versioning.py  test_websockets.py
